<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FirstFrameActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/scrollview_build_in_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:textAllCaps="false"
        android:text="@string/scrollview_build_in_recyclerview"
        android:textSize="@dimen/sp_15"
        android:layout_marginTop="@dimen/dp_10"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/recyclerview_build_in_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:textAllCaps="false"
        android:text="@string/recyclerview_build_in_recyclerview"
        android:textSize="@dimen/sp_15"
        android:layout_marginTop="@dimen/dp_10"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/recyclerview_build_in_scrollview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:textAllCaps="false"
        android:text="@string/recyclerview_build_in_scrollview"
        android:textSize="@dimen/sp_15"
        android:layout_marginTop="@dimen/dp_10"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/scrollview_build_in_scrollview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:textAllCaps="false"
        android:text="@string/scrollview_build_in_scrollview"
        android:textSize="@dimen/sp_15"
        android:layout_marginTop="@dimen/dp_10"/>

</androidx.appcompat.widget.LinearLayoutCompat>