<?xml version="1.0" encoding="utf-8"?>
<com.wolfsea.recyclerviewdemo.defineview.DefineConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecyclerViewLocalRefreshActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/top_ll_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_225"
        android:orientation="vertical"
        android:layout_margin="@dimen/dp_10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/key_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:hint="@string/input_key_hint"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/value_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:hint="@string/input_value_hint"
            android:layout_marginTop="@dimen/dp_10"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/position_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:hint="@string/input_position_hint"
            android:layout_marginTop="@dimen/dp_10"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sure_update_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/sure_update"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <!--
       shimmer_demo_shimmer_color 为闪烁颜色
       shimmer_demo_layout  为闪烁布局
       shimmer_demo_layout_manager_type  为布局管理器类型
    -->
    <com.wolfsea.recyclerviewdemo.shimmer.ShimmerRecyclerView
        android:id="@+id/local_refresh_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@id/top_ll_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:shimmer_demo_layout="@layout/shimmer_layout_local_refresh"
        app:shimmer_demo_layout_manager_type="linear_vertical"
        app:shimmer_demo_shimmer_color="@color/shimmer_shimmer_color"
        android:layout_marginTop="@dimen/dp_10"/>


</com.wolfsea.recyclerviewdemo.defineview.DefineConstraintLayout>